--- a/smplog.config.toml
+++ b/smplog.config.toml
@@ -95,6 +95,21 @@ prompt      = 10   # BrightGreen
 data        = 7    # White
 divider     = 8    # BrightBlack
 
+# ─────────────────────────────────────────────────────────────────────────────
+# [[tui]] — compact menu/TUI helper defaults used by printf/tui_engine.
+#
+# Notes:
+# - This is an array-of-table section so future profiles can be represented.
+# - If multiple [[tui]] blocks are present, the last one wins.
+# - Omit the section to use DefaultTUIConfig() defaults.
+# ─────────────────────────────────────────────────────────────────────────────
+[[tui]]
+menu_selected_prefix   = ">"
+menu_unselected_prefix = " "
+menu_index_width       = 2
+input_cursor           = "_"
+divider_width          = 64
+
 
 # ─────────────────────────────────────────────────────────────────────────────
 # [[files]] — named log file destinations for use with WriteFile.
